--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon -r dotenv/config server.js",
-    "dev": "node -r dotenv/config server.js"
+    "prod": "node -r dotenv/config server.js"
   },
   "author": "",
   "license": "ISC",
